Fixes #13472 - Support multiple directories to be scanned by deployment-scanner.
* Updated jetty-deployment-scanner.xml to support a CVS list of directories.
* Updated documentation.
* Added tests, and cleaned up XmlConfigurationTest.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>