@@ -207,26 +207,21 @@ public class XmlConfigurationTest
         assertEquals(4, tc2.testInt, "nested config");
         assertEquals("http://www.eclipse.com/", tc2.url.toString(), "nested call");
 
-        assertEquals(tc.testField1, 77, "static to field");
-        assertEquals(tc.testField2, 2, "field to field");
-        assertEquals(ExampleConfiguration.VALUE, 42, "literal to static");
+        assertEquals(77, tc.testField1, "static to field");
+        assertEquals(2, tc.testField2, "field to field");
+        assertEquals(42, ExampleConfiguration.VALUE, "literal to static");
 
         @SuppressWarnings("unchecked")
         Map<String, String> map = (Map<String, String>)configuration.getIdMap().get("map");
-        assertEquals(map.get("key0"), "value0");
-        assertEquals(map.get("key1"), "value1");
+        assertEquals("value0", map.get("key0"));
+        assertEquals("value1", map.get("key1"));
 
         @SuppressWarnings("unchecked")
         Map<String, String> concurrentMap = (Map<String, String>)configuration.getIdMap().get("concurrentMap");
         assertThat(concurrentMap, instanceOf(ConcurrentMap.class));
-        assertEquals(concurrentMap.get("KEY"), "ITEM");
+        assertEquals("ITEM", concurrentMap.get("KEY"));
 
         assertThat(tc.builder, is("builder"));
-
-        if ("org/eclipse/jetty/xml/configureWithElements.xml".equals(configure))
-        {
-            // System.err.println("Static call with TestImpl: " + ExampleConfiguration.calledWithClass);
-        }
     }
 
     @ParameterizedTest
@@ -325,18 +320,24 @@ public class XmlConfigurationTest
     public XmlConfiguration asXmlConfiguration(String rawXml) throws IOException, SAXException
     {
         if (!rawXml.contains("!DOCTYPE"))
-            rawXml = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-                "<!DOCTYPE Configure PUBLIC \"-//Jetty//Configure//EN\" \"https://jetty.org/configure_10_0.dtd\">\n" +
-                rawXml;
+        {
+            rawXml = """
+                <?xml version="1.0" encoding="UTF-8"?>
+                <!DOCTYPE Configure PUBLIC "-//Jetty//Configure//EN" "https://jetty.org/configure_10_0.dtd">
+                %s""".formatted(rawXml);
+        }
         return asXmlConfiguration("raw.xml", rawXml);
     }
 
     public XmlConfiguration asXmlConfiguration(String filename, String rawXml) throws IOException, SAXException
     {
         if (!rawXml.contains("!DOCTYPE"))
-            rawXml = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-                "<!DOCTYPE Configure PUBLIC \"-//Jetty//Configure//EN\" \"https://jetty.org/configure_10_0.dtd\">\n" +
-                rawXml;
+        {
+            rawXml = """
+                <?xml version="1.0" encoding="UTF-8"?>
+                <!DOCTYPE Configure PUBLIC "-//Jetty//Configure//EN" "https://jetty.org/configure_10_0.dtd">
+                %s""".formatted(rawXml);
+        }
         Path testFile = workDir.getEmptyPathDir().resolve(filename);
         try (BufferedWriter writer = Files.newBufferedWriter(testFile, UTF_8))
         {
@@ -348,13 +349,25 @@ public class XmlConfigurationTest
     @Test
     public void testGetClass() throws Exception
     {
-        XmlConfiguration configuration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"Test\"><Get name=\"class\"/></Set></Configure>");
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="Test">
+                <Get name="class"/>
+              </Set>
+            </Configure>""");
         ExampleConfiguration tc = new ExampleConfiguration();
         configuration.configure(tc);
         assertEquals(ExampleConfiguration.class, tc.testObject);
 
         configuration =
-            asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"Test\"><Get class=\"java.lang.String\" name=\"class\"><Get id=\"simple\" name=\"simpleName\"/></Get></Set></Configure>");
+            asXmlConfiguration("""
+                <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+                  <Set name="Test">
+                    <Get class="java.lang.String" name="class">
+                      <Get id="simple" name="simpleName"/>
+                    </Get>
+                  </Set>
+                </Configure>""");
         configuration.configure(tc);
         assertEquals(String.class, tc.testObject);
         assertEquals("String", configuration.getIdMap().get("simple"));
@@ -363,7 +376,11 @@ public class XmlConfigurationTest
     @Test
     public void testStringConfiguration() throws Exception
     {
-        XmlConfiguration configuration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"Test\">SetValue</Set><Set name=\"Test\" type=\"int\">2</Set></Configure>");
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="Test">SetValue</Set>
+              <Set name="Test" type="int">2</Set>
+            </Configure>""");
         ExampleConfiguration tc = new ExampleConfiguration();
         configuration.configure(tc);
         assertEquals("SetValue", tc.testObject, "Set String 3");
@@ -373,31 +390,40 @@ public class XmlConfigurationTest
     @Test
     public void testSetWithProperty() throws Exception
     {
-        XmlConfiguration configuration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"TestString\" property=\"prop\" id=\"test\"/></Configure>");
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="TestString" property="prop" id="test"/>
+            </Configure>""");
         configuration.getProperties().put("prop", "This is a property value");
         ExampleConfiguration tc = new ExampleConfiguration();
         tc.setTestString("default");
         configuration.configure(tc);
         assertEquals("This is a property value", tc.getTestString());
-        assertEquals(configuration.getIdMap().get("test"), "This is a property value");
+        assertEquals("This is a property value", configuration.getIdMap().get("test"));
     }
 
     @Test
     public void testSetFieldWithProperty() throws Exception
     {
-        XmlConfiguration configuration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"testField1\" property=\"prop\" id=\"test\"/></Configure>");
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="testField1" property="prop" id="test"/>
+            </Configure>""");
         configuration.getProperties().put("prop", "42");
         ExampleConfiguration tc = new ExampleConfiguration();
         tc.testField1 = -1;
         configuration.configure(tc);
         assertEquals(42, tc.testField1);
-        assertEquals(configuration.getIdMap().get("test"), "42");
+        assertEquals("42", configuration.getIdMap().get("test"));
     }
 
     @Test
     public void testNotSetFieldWithNullProperty() throws Exception
     {
-        XmlConfiguration configuration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"testField1\" property=\"prop\" id=\"test\"/></Configure>");
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="testField1" property="prop" id="test"/>
+            </Configure>""");
         configuration.getProperties().remove("prop");
         ExampleConfiguration tc = new ExampleConfiguration();
         tc.testField1 = -1;
@@ -409,7 +435,10 @@ public class XmlConfigurationTest
     @Test
     public void testSetWithNullProperty() throws Exception
     {
-        XmlConfiguration configuration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"TestString\" property=\"prop\" id=\"test\"/></Configure>");
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="TestString" property="prop" id="test"/>
+            </Configure>""");
         configuration.getProperties().remove("prop");
         ExampleConfiguration tc = new ExampleConfiguration();
         tc.setTestString("default");
@@ -421,19 +450,25 @@ public class XmlConfigurationTest
     @Test
     public void testSetWithPropertyAndValue() throws Exception
     {
-        XmlConfiguration configuration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"TestString\" property=\"prop\" id=\"test\">Value</Set></Configure>");
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="TestString" property="prop" id="test">Value</Set>
+            </Configure>""");
         configuration.getProperties().put("prop", "This is a property value");
         ExampleConfiguration tc = new ExampleConfiguration();
         tc.setTestString("default");
         configuration.configure(tc);
         assertEquals("Value", tc.getTestString());
-        assertEquals(configuration.getIdMap().get("test"), "Value");
+        assertEquals("Value", configuration.getIdMap().get("test"));
     }
 
     @Test
     public void testSetWithNullPropertyAndValue() throws Exception
     {
-        XmlConfiguration configuration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"TestString\" property=\"prop\" id=\"test\">Value</Set></Configure>");
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="TestString" property="prop" id="test">Value</Set>
+            </Configure>""");
         configuration.getProperties().remove("prop");
         ExampleConfiguration tc = new ExampleConfiguration();
         tc.setTestString("default");
@@ -445,7 +480,10 @@ public class XmlConfigurationTest
     @Test
     public void testSetWithWrongNameAndProperty() throws Exception
     {
-        XmlConfiguration configuration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"WrongName\" property=\"prop\" id=\"test\"/></Configure>");
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="WrongName" property="prop" id="test"/>
+            </Configure>""");
         configuration.getProperties().put("prop", "This is a property value");
         ExampleConfiguration tc = new ExampleConfiguration();
         tc.setTestString("default");
@@ -458,7 +496,10 @@ public class XmlConfigurationTest
     @Test
     public void testSetWithWrongNameAndNullProperty() throws Exception
     {
-        XmlConfiguration configuration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"WrongName\" property=\"prop\" id=\"test\"/></Configure>");
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="WrongName" property="prop" id="test"/>
+            </Configure>""");
         configuration.getProperties().remove("prop");
         ExampleConfiguration tc = new ExampleConfiguration();
         tc.setTestString("default");
@@ -470,9 +511,12 @@ public class XmlConfigurationTest
     }
 
     @Test
-    public void testMeaningfullSetException() throws Exception
+    public void testMeaningfulSetException() throws Exception
     {
-        XmlConfiguration configuration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"PropertyTest\"><Property name=\"null\"/></Set></Configure>");
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="PropertyTest"><Property name="null"/></Set>
+            </Configure>""");
         ExampleConfiguration tc = new ExampleConfiguration();
 
         NoSuchMethodException e = assertThrows(NoSuchMethodException.class, () -> configuration.configure(tc));
@@ -483,9 +527,14 @@ public class XmlConfigurationTest
     @Test
     public void testListConstructorArg() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-            "<Set name=\"constructorArgTestClass\"><New class=\"org.eclipse.jetty.xml.ConstructorArgTestClass\"><Arg type=\"List\">" +
-            STRING_ARRAY_XML + "</Arg></New></Set></Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="constructorArgTestClass">
+                <New class="org.eclipse.jetty.xml.ConstructorArgTestClass">
+                  <Arg type="List">%s</Arg>
+                </New>
+              </Set>
+            </Configure>""".formatted(STRING_ARRAY_XML));
         ExampleConfiguration tc = new ExampleConfiguration();
         assertThat("tc.getList() returns null as it's not configured yet", tc.getList(), is(nullValue()));
         xmlConfiguration.configure(tc);
@@ -496,11 +545,15 @@ public class XmlConfigurationTest
     @Test
     public void testTwoArgumentListConstructorArg() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-            "<Set name=\"constructorArgTestClass\"><New class=\"org.eclipse.jetty.xml.ConstructorArgTestClass\">" +
-            "<Arg type=\"List\">" + STRING_ARRAY_XML + "</Arg>" +
-            "<Arg type=\"List\">" + STRING_ARRAY_XML + "</Arg>" +
-            "</New></Set></Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="constructorArgTestClass">
+                <New class="org.eclipse.jetty.xml.ConstructorArgTestClass">
+                  <Arg type="List">%s</Arg>
+                  <Arg type="List">%s</Arg>
+                </New>
+              </Set>
+            </Configure>""".formatted(STRING_ARRAY_XML, STRING_ARRAY_XML));
         ExampleConfiguration tc = new ExampleConfiguration();
         assertThat("tc.getList() returns null as it's not configured yet", tc.getList(), is(nullValue()));
         xmlConfiguration.configure(tc);
@@ -511,8 +564,12 @@ public class XmlConfigurationTest
     @Test
     public void testListNotContainingArray() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-            "<New class=\"org.eclipse.jetty.xml.ConstructorArgTestClass\"><Arg type=\"List\">Some String</Arg></New></Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <New class="org.eclipse.jetty.xml.ConstructorArgTestClass">
+                <Arg type="List">Some String</Arg>
+              </New>
+            </Configure>""");
         ExampleConfiguration tc = new ExampleConfiguration();
 
         assertThrows(IllegalArgumentException.class, () -> xmlConfiguration.configure(tc));
@@ -521,9 +578,9 @@ public class XmlConfigurationTest
     @Test
     public void testSetConstructorArg() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-            "<Set name=\"constructorArgTestClass\"><New class=\"org.eclipse.jetty.xml.ConstructorArgTestClass\"><Arg type=\"Set\">" +
-            STRING_ARRAY_XML + "</Arg></New></Set></Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">\n" +
+            "<Set name=\"constructorArgTestClass\"><New class=\"org.eclipse.jetty.xml.ConstructorArgTestClass\"><Arg type=\"Set\">\n" +
+            STRING_ARRAY_XML + "</Arg></New></Set>\n</Configure>");
         ExampleConfiguration tc = new ExampleConfiguration();
         assertThat("tc.getList() returns null as it's not configured yet", tc.getSet(), is(nullValue()));
         xmlConfiguration.configure(tc);
@@ -534,8 +591,12 @@ public class XmlConfigurationTest
     @Test
     public void testSetNotContainingArray() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-            "<New class=\"org.eclipse.jetty.xml.ConstructorArgTestClass\"><Arg type=\"Set\">Some String</Arg></New></Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <New class="org.eclipse.jetty.xml.ConstructorArgTestClass">
+                <Arg type="Set">Some String</Arg>
+              </New>
+            </Configure>""");
         ExampleConfiguration tc = new ExampleConfiguration();
         assertThrows(IllegalArgumentException.class, () -> xmlConfiguration.configure(tc));
     }
@@ -543,8 +604,10 @@ public class XmlConfigurationTest
     @Test
     public void testListSetterWithStringArray() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"List\">" +
-            STRING_ARRAY_XML + "</Set></Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="List">%s</Set>
+            </Configure>""".formatted(STRING_ARRAY_XML));
         ExampleConfiguration tc = new ExampleConfiguration();
         assertThat("tc.getList() returns null as it's not configured yet", tc.getList(), is(nullValue()));
         xmlConfiguration.configure(tc);
@@ -554,8 +617,10 @@ public class XmlConfigurationTest
     @Test
     public void testListSetterWithPrimitiveArray() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"List\">" +
-            INT_ARRAY_XML + "</Set></Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="List">%s</Set>
+            </Configure>""".formatted(INT_ARRAY_XML));
         ExampleConfiguration tc = new ExampleConfiguration();
         assertThat("tc.getList() returns null as it's not configured yet", tc.getList(), is(nullValue()));
         xmlConfiguration.configure(tc);
@@ -565,8 +630,10 @@ public class XmlConfigurationTest
     @Test
     public void testNotSupportedLinkedListSetter() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"LinkedList\">" +
-            INT_ARRAY_XML + "</Set></Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="LinkedList">%s</Set>
+            </Configure>""".formatted(INT_ARRAY_XML));
         ExampleConfiguration tc = new ExampleConfiguration();
         assertThat("tc.getSet() returns null as it's not configured yet", tc.getList(), is(nullValue()));
         assertThrows(NoSuchMethodException.class, () -> xmlConfiguration.configure(tc));
@@ -575,8 +642,10 @@ public class XmlConfigurationTest
     @Test
     public void testArrayListSetter() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"ArrayList\">" +
-            INT_ARRAY_XML + "</Set></Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="ArrayList">%s</Set>
+            </Configure>""".formatted(INT_ARRAY_XML));
         ExampleConfiguration tc = new ExampleConfiguration();
         assertThat("tc.getSet() returns null as it's not configured yet", tc.getList(), is(nullValue()));
         xmlConfiguration.configure(tc);
@@ -586,8 +655,10 @@ public class XmlConfigurationTest
     @Test
     public void testSetSetter() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"Set\">" +
-            STRING_ARRAY_XML + "</Set></Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="Set">%s</Set>
+            </Configure>""".formatted(STRING_ARRAY_XML));
         ExampleConfiguration tc = new ExampleConfiguration();
         assertThat("tc.getSet() returns null as it's not configured yet", tc.getSet(), is(nullValue()));
         xmlConfiguration.configure(tc);
@@ -597,8 +668,10 @@ public class XmlConfigurationTest
     @Test
     public void testSetSetterWithPrimitiveArray() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration("<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\"><Set name=\"Set\">" +
-            INT_ARRAY_XML + "</Set></Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="Set">%s</Set>
+            </Configure>""".formatted(INT_ARRAY_XML));
         ExampleConfiguration tc = new ExampleConfiguration();
         assertThat("tc.getSet() returns null as it's not configured yet", tc.getSet(), is(nullValue()));
         xmlConfiguration.configure(tc);
@@ -608,21 +681,21 @@ public class XmlConfigurationTest
     @Test
     public void testMap() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-                "    <Set name=\"map\">" +
-                "        <Map>" +
-                "            <Entry>" +
-                "                <Item>key1</Item>" +
-                "                <Item>value1</Item>" +
-                "            </Entry>" +
-                "            <Entry>" +
-                "                <Item>key2</Item>" +
-                "                <Item>value2</Item>" +
-                "            </Entry>" +
-                "        </Map>" +
-                "    </Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="map">
+                <Map>
+                  <Entry>
+                    <Item>key1</Item>
+                    <Item>value1</Item>
+                  </Entry>
+                  <Entry>
+                    <Item>key2</Item>
+                    <Item>value2</Item>
+                  </Entry>
+                </Map>
+              </Set>
+            </Configure>""");
         ExampleConfiguration tc = new ExampleConfiguration();
         assertNull(tc.map, "tc.map is null as it's not configured yet");
         xmlConfiguration.configure(tc);
@@ -632,12 +705,12 @@ public class XmlConfigurationTest
     @Test
     public void testConstructorNamedInjection() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "  <Arg>arg1</Arg>  " +
-                "  <Arg>arg2</Arg>  " +
-                "  <Arg>arg3</Arg>  " +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+              <Arg>arg1</Arg>  \
+              <Arg>arg2</Arg>  \
+              <Arg>arg3</Arg>  \
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -649,12 +722,12 @@ public class XmlConfigurationTest
     @Test
     public void testConstructorNamedInjectionOrdered() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "  <Arg name=\"first\">arg1</Arg>  " +
-                "  <Arg name=\"second\">arg2</Arg>  " +
-                "  <Arg name=\"third\">arg3</Arg>  " +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+              <Arg name="first">arg1</Arg>  \
+              <Arg name="second">arg2</Arg>  \
+              <Arg name="third">arg3</Arg>  \
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -666,12 +739,12 @@ public class XmlConfigurationTest
     @Test
     public void testConstructorNamedInjectionUnOrdered() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "  <Arg name=\"first\">arg1</Arg>  " +
-                "  <Arg name=\"third\">arg3</Arg>  " +
-                "  <Arg name=\"second\">arg2</Arg>  " +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+              <Arg name="first">arg1</Arg>  \
+              <Arg name="third">arg3</Arg>  \
+              <Arg name="second">arg2</Arg>  \
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -683,12 +756,12 @@ public class XmlConfigurationTest
     @Test
     public void testConstructorNamedInjectionOrderedMixed() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "  <Arg name=\"first\">arg1</Arg>  " +
-                "  <Arg>arg2</Arg>  " +
-                "  <Arg name=\"third\">arg3</Arg>  " +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+              <Arg name="first">arg1</Arg>  \
+              <Arg>arg2</Arg>  \
+              <Arg name="third">arg3</Arg>  \
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -700,12 +773,12 @@ public class XmlConfigurationTest
     @Test
     public void testConstructorNamedInjectionUnorderedMixed() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "  <Arg name=\"third\">arg3</Arg>  " +
-                "  <Arg>arg2</Arg>  " +
-                "  <Arg name=\"first\">arg1</Arg>  " +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+              <Arg name="third">arg3</Arg>  \
+              <Arg>arg2</Arg>  \
+              <Arg name="first">arg1</Arg>  \
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -717,19 +790,19 @@ public class XmlConfigurationTest
     @Test
     public void testNestedConstructorNamedInjection() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "  <Arg>arg1</Arg>  " +
-                "  <Arg>arg2</Arg>  " +
-                "  <Arg>arg3</Arg>  " +
-                "  <Set name=\"nested\">  " +
-                "    <New class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "      <Arg>arg1</Arg>  " +
-                "      <Arg>arg2</Arg>  " +
-                "      <Arg>arg3</Arg>  " +
-                "    </New>" +
-                "  </Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+              <Arg>arg1</Arg>  \
+              <Arg>arg2</Arg>  \
+              <Arg>arg3</Arg>  \
+              <Set name="nested">  \
+                <New class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+                  <Arg>arg1</Arg>  \
+                  <Arg>arg2</Arg>  \
+                  <Arg>arg3</Arg>  \
+                </New>
+              </Set>
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -744,19 +817,19 @@ public class XmlConfigurationTest
     @Test
     public void testNestedConstructorNamedInjectionOrdered() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "  <Arg name=\"first\">arg1</Arg>  " +
-                "  <Arg name=\"second\">arg2</Arg>  " +
-                "  <Arg name=\"third\">arg3</Arg>  " +
-                "  <Set name=\"nested\">  " +
-                "    <New class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "      <Arg name=\"first\">arg1</Arg>  " +
-                "      <Arg name=\"second\">arg2</Arg>  " +
-                "      <Arg name=\"third\">arg3</Arg>  " +
-                "    </New>" +
-                "  </Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+              <Arg name="first">arg1</Arg>  \
+              <Arg name="second">arg2</Arg>  \
+              <Arg name="third">arg3</Arg>  \
+              <Set name="nested">  \
+                <New class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+                  <Arg name="first">arg1</Arg>  \
+                  <Arg name="second">arg2</Arg>  \
+                  <Arg name="third">arg3</Arg>  \
+                </New>
+              </Set>
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -840,18 +913,18 @@ public class XmlConfigurationTest
     @Test
     public void testOverloadedCall() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "  <Call name=\"call\">" +
-                "    <Arg type=\"int\">1</Arg>" +
-                "  </Call>" +
-                "  <Call name=\"call\">" +
-                "    <Arg>2</Arg>" +
-                "  </Call>" +
-                "  <Call name=\"call\">" +
-                "    <Arg type=\"Long\">3</Arg>" +
-                "  </Call>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+              <Call name="call">
+                <Arg type="int">1</Arg>
+              </Call>
+              <Call name="call">
+                <Arg>2</Arg>
+              </Call>
+              <Call name="call">
+                <Arg type="Long">3</Arg>
+              </Call>
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -863,19 +936,19 @@ public class XmlConfigurationTest
     @Test
     public void testNestedConstructorNamedInjectionUnOrdered() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "  <Arg name=\"first\">arg1</Arg>  " +
-                "  <Arg name=\"third\">arg3</Arg>  " +
-                "  <Arg name=\"second\">arg2</Arg>  " +
-                "  <Set name=\"nested\">  " +
-                "    <New class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "      <Arg name=\"first\">arg1</Arg>  " +
-                "      <Arg name=\"third\">arg3</Arg>  " +
-                "      <Arg name=\"second\">arg2</Arg>  " +
-                "    </New>" +
-                "  </Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+              <Arg name="first">arg1</Arg>  \
+              <Arg name="third">arg3</Arg>  \
+              <Arg name="second">arg2</Arg>  \
+              <Set name="nested">  \
+                <New class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+                  <Arg name="first">arg1</Arg>  \
+                  <Arg name="third">arg3</Arg>  \
+                  <Arg name="second">arg2</Arg>  \
+                </New>
+              </Set>
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -890,19 +963,19 @@ public class XmlConfigurationTest
     @Test
     public void testNestedConstructorNamedInjectionOrderedMixed() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "  <Arg name=\"first\">arg1</Arg>  " +
-                "  <Arg>arg2</Arg>  " +
-                "  <Arg name=\"third\">arg3</Arg>  " +
-                "  <Set name=\"nested\">  " +
-                "    <New class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "      <Arg name=\"first\">arg1</Arg>  " +
-                "      <Arg>arg2</Arg>  " +
-                "      <Arg name=\"third\">arg3</Arg>  " +
-                "    </New>" +
-                "  </Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+              <Arg name="first">arg1</Arg>  \
+              <Arg>arg2</Arg>  \
+              <Arg name="third">arg3</Arg>  \
+              <Set name="nested">  \
+                <New class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+                  <Arg name="first">arg1</Arg>  \
+                  <Arg>arg2</Arg>  \
+                  <Arg name="third">arg3</Arg>  \
+                </New>
+              </Set>
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -917,14 +990,14 @@ public class XmlConfigurationTest
     @Test
     public void testCallNamedInjection() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                " <Call name=\"setAll\">" +
-                "  <Arg>arg1</Arg>  " +
-                "  <Arg>arg2</Arg>  " +
-                "  <Arg>arg3</Arg>  " +
-                " </Call>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+             <Call name="setAll">
+              <Arg>arg1</Arg>  \
+              <Arg>arg2</Arg>  \
+              <Arg>arg3</Arg>  \
+             </Call>
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -936,14 +1009,14 @@ public class XmlConfigurationTest
     @Test
     public void testCallNamedInjectionOrdered() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                " <Call name=\"setAll\">" +
-                "  <Arg name=\"first\">arg1</Arg>  " +
-                "  <Arg name=\"second\">arg2</Arg>  " +
-                "  <Arg name=\"third\">arg3</Arg>  " +
-                " </Call>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+             <Call name="setAll">
+              <Arg name="first">arg1</Arg>  \
+              <Arg name="second">arg2</Arg>  \
+              <Arg name="third">arg3</Arg>  \
+             </Call>
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -955,14 +1028,14 @@ public class XmlConfigurationTest
     @Test
     public void testCallNamedInjectionUnOrdered() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                " <Call name=\"setAll\">" +
-                "  <Arg name=\"first\">arg1</Arg>  " +
-                "  <Arg name=\"third\">arg3</Arg>  " +
-                "  <Arg name=\"second\">arg2</Arg>  " +
-                " </Call>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+             <Call name="setAll">
+              <Arg name="first">arg1</Arg>  \
+              <Arg name="third">arg3</Arg>  \
+              <Arg name="second">arg2</Arg>  \
+             </Call>
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -974,14 +1047,14 @@ public class XmlConfigurationTest
     @Test
     public void testCallNamedInjectionOrderedMixed() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                " <Call name=\"setAll\">" +
-                "  <Arg name=\"first\">arg1</Arg>  " +
-                "  <Arg>arg2</Arg>  " +
-                "  <Arg name=\"third\">arg3</Arg>  " +
-                " </Call>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+             <Call name="setAll">
+              <Arg name="first">arg1</Arg>  \
+              <Arg>arg2</Arg>  \
+              <Arg name="third">arg3</Arg>  \
+             </Call>
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -993,14 +1066,14 @@ public class XmlConfigurationTest
     @Test
     public void testCallNamedInjectionUnorderedMixed() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                " <Call name=\"setAll\">" +
-                "  <Arg name=\"third\">arg3</Arg>  " +
-                "  <Arg>arg2</Arg>  " +
-                "  <Arg name=\"first\">arg1</Arg>  " +
-                " </Call>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+             <Call name="setAll">
+              <Arg name="third">arg3</Arg>  \
+              <Arg>arg2</Arg>  \
+              <Arg name="first">arg1</Arg>  \
+             </Call>
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -1012,13 +1085,13 @@ public class XmlConfigurationTest
     @Test
     public void testCallVarArgs() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                " <Call name=\"setVarArgs\">" +
-                "  <Arg>one</Arg>  " +
-                "  <Arg><Array type=\"String\"><Item type=\"String\">two</Item><Item type=\"String\">three</Item></Array></Arg>  " +
-                " </Call>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+             <Call name="setVarArgs">
+              <Arg>one</Arg>  \
+              <Arg><Array type="String"><Item type="String">two</Item><Item type="String">three</Item></Array></Arg>  \
+             </Call>
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -1030,15 +1103,15 @@ public class XmlConfigurationTest
     @Test
     public void testCallMissingVarArgs() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "  <Arg name=\"first\">arg1</Arg>  " +
-                "  <Arg name=\"second\">arg2</Arg>  " +
-                "  <Arg name=\"third\">arg3</Arg>  " +
-                " <Call name=\"setVarArgs\">" +
-                "  <Arg>one</Arg>" +
-                " </Call>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+              <Arg name="first">arg1</Arg>  \
+              <Arg name="second">arg2</Arg>  \
+              <Arg name="third">arg3</Arg>  \
+             <Call name="setVarArgs">
+              <Arg>one</Arg>
+             </Call>
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -1068,12 +1141,12 @@ public class XmlConfigurationTest
     @MethodSource("typeTestData")
     public void testCallNumberConversion(String type) throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-                " <Call name=\"setNumber\">" +
-                "  <Arg type=\"" + type + "\">42</Arg>" +
-                " </Call>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Call name="setNumber">
+                <Arg type="%s">42</Arg>
+              </Call>
+            </Configure>""".formatted(type));
 
         ExampleConfiguration tc = (ExampleConfiguration)xmlConfiguration.configure();
         assertEquals(42.0D, tc.number);
@@ -1082,19 +1155,20 @@ public class XmlConfigurationTest
     @Test
     public void testArgumentsGetIgnoredMissingDTD() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "  <Arg>arg1</Arg>  " +
-                "  <Arg>arg2</Arg>  " +
-                "  <Arg>arg3</Arg>  " +
-                "  <Set name=\"nested\">  " +
-                "    <New class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">\n" +
-                "      <Arg>arg1</Arg>\n" +
-                "      <Arg>arg2</Arg>\n" +
-                "      <Arg>arg3</Arg>\n" +
-                "    </New>" +
-                "  </Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+              <Arg>arg1</Arg>
+              <Arg>arg2</Arg>
+              <Arg>arg3</Arg>
+              <Set name="nested">
+                <New class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+                  <Arg>arg1</Arg>
+                  <Arg>arg2</Arg>
+                  <Arg>arg3</Arg>
+                </New>
+              </Set>
+            </Configure>
+            """);
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -1109,19 +1183,19 @@ public class XmlConfigurationTest
     @Test
     public void testSetGetIgnoredMissingDTD() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.DefaultTestConfiguration\">" +
-                "  <Set name=\"first\">arg1</Set>  " +
-                "  <Set name=\"second\">arg2</Set>  " +
-                "  <Set name=\"third\">arg3</Set>  " +
-                "  <Set name=\"nested\">  " +
-                "    <New class=\"org.eclipse.jetty.xml.DefaultTestConfiguration\">\n" +
-                "      <Set name=\"first\">arg1</Set>  " +
-                "      <Set name=\"second\">arg2</Set>  " +
-                "      <Set name=\"third\">arg3</Set>  " +
-                "    </New>" +
-                "  </Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.DefaultTestConfiguration">
+              <Set name="first">arg1</Set>  \
+              <Set name="second">arg2</Set>  \
+              <Set name="third">arg3</Set>  \
+              <Set name="nested">  \
+                <New class="org.eclipse.jetty.xml.DefaultTestConfiguration">
+                  <Set name="first">arg1</Set>  \
+                  <Set name="second">arg2</Set>  \
+                  <Set name="third">arg3</Set>  \
+                </New>
+              </Set>
+            </Configure>""");
 
         DefaultTestConfiguration atc = (DefaultTestConfiguration)xmlConfiguration.configure();
 
@@ -1136,19 +1210,19 @@ public class XmlConfigurationTest
     @Test
     public void testNestedConstructorNamedInjectionUnorderedMixed() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "  <Arg name=\"third\">arg3</Arg>  " +
-                "  <Arg>arg2</Arg>  " +
-                "  <Arg name=\"first\">arg1</Arg>  " +
-                "  <Set name=\"nested\">  " +
-                "    <New class=\"org.eclipse.jetty.xml.AnnotatedTestConfiguration\">" +
-                "      <Arg name=\"third\">arg3</Arg>  " +
-                "      <Arg>arg2</Arg>  " +
-                "      <Arg name=\"first\">arg1</Arg>  " +
-                "    </New>" +
-                "  </Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+              <Arg name="third">arg3</Arg>  \
+              <Arg>arg2</Arg>  \
+              <Arg name="first">arg1</Arg>  \
+              <Set name="nested">  \
+                <New class="org.eclipse.jetty.xml.AnnotatedTestConfiguration">
+                  <Arg name="third">arg3</Arg>  \
+                  <Arg>arg2</Arg>  \
+                  <Arg name="first">arg1</Arg>  \
+                </New>
+              </Set>
+            </Configure>""");
 
         AnnotatedTestConfiguration atc = (AnnotatedTestConfiguration)xmlConfiguration.configure();
 
@@ -1200,10 +1274,10 @@ public class XmlConfigurationTest
     @Test
     public void testSetBooleanTrue() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder\">" +
-                "  <Set name=\"boolean\">true</Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder">
+              <Set name="boolean">true</Set>
+            </Configure>""");
 
         NativeHolder bh = (NativeHolder)xmlConfiguration.configure();
         assertTrue(bh.getBoolean());
@@ -1212,10 +1286,10 @@ public class XmlConfigurationTest
     @Test
     public void testSetBooleanFalse() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder\">" +
-                "  <Set name=\"boolean\">false</Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder">
+              <Set name="boolean">false</Set>
+            </Configure>""");
 
         NativeHolder bh = (NativeHolder)xmlConfiguration.configure();
         assertFalse(bh.getBoolean());
@@ -1224,12 +1298,12 @@ public class XmlConfigurationTest
     @Test
     public void testSetBadBoolean() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder\">" +
-                "  <Set name=\"boolean\">tru</Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder">
+              <Set name="boolean">tru</Set>
+            </Configure>""");
 
-        //Any string other than "true" (case insensitive) will be false
+        //Any string other than "true" (case-insensitive) will be false
         //according to Boolean constructor.
         NativeHolder bh = (NativeHolder)xmlConfiguration.configure();
         assertFalse(bh.getBoolean(), "boolean['tru']");
@@ -1238,10 +1312,10 @@ public class XmlConfigurationTest
     @Test
     public void testSetBadInteger() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder\">" +
-                "  <Set name=\"integer\">bad</Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder">
+              <Set name="integer">bad</Set>
+            </Configure>""");
 
         assertThrows(InvocationTargetException.class, xmlConfiguration::configure);
     }
@@ -1249,10 +1323,10 @@ public class XmlConfigurationTest
     @Test
     public void testSetBadExtraInteger() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder\">" +
-                "  <Set name=\"integer\">100 bas</Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder">
+              <Set name="integer">100 bas</Set>
+            </Configure>""");
 
         assertThrows(InvocationTargetException.class, xmlConfiguration::configure);
     }
@@ -1260,12 +1334,12 @@ public class XmlConfigurationTest
     @Test
     public void testSetTrimmedSetterInt() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder\">" +
-                "  <Set name=\"integer\">" +
-                "    42  " +
-                "  </Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder">
+              <Set name="integer">
+                42  \
+              </Set>
+            </Configure>""");
 
         NativeHolder holder = (NativeHolder)xmlConfiguration.configure();
         assertThat(holder._integer, is(42));
@@ -1274,12 +1348,12 @@ public class XmlConfigurationTest
     @Test
     public void testSetTrimmedIntSetterWithType() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder\">" +
-                "  <Set name=\"integer\" type=\"int\">" +
-                "    42  " +
-                "  </Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder">
+              <Set name="integer" type="int">
+                42  \
+              </Set>
+            </Configure>""");
 
         NativeHolder holder = (NativeHolder)xmlConfiguration.configure();
         assertThat(holder._integer, is(42));
@@ -1288,12 +1362,12 @@ public class XmlConfigurationTest
     @Test
     public void testSetTrimmedFieldInt() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder\">" +
-                "  <Set name=\"_integer\">" +
-                "    42  " +
-                "  </Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder">
+              <Set name="_integer">
+                42  \
+              </Set>
+            </Configure>""");
 
         NativeHolder holder = (NativeHolder)xmlConfiguration.configure();
         assertThat(holder._integer, is(42));
@@ -1302,12 +1376,12 @@ public class XmlConfigurationTest
     @Test
     public void testSetTrimmedIntFieldWithType() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder\">" +
-                "  <Set name=\"integer\" type=\"int\">" +
-                "    42  " +
-                "  </Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder">
+              <Set name="integer" type="int">
+                42  \
+              </Set>
+            </Configure>""");
 
         NativeHolder holder = (NativeHolder)xmlConfiguration.configure();
         assertThat(holder._integer, is(42));
@@ -1316,10 +1390,10 @@ public class XmlConfigurationTest
     @Test
     public void testSetBadFloatInteger() throws Exception
     {
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder\">" +
-                "  <Set name=\"integer\">1.5</Set>" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.XmlConfigurationTest$NativeHolder">
+              <Set name="integer">1.5</Set>
+            </Configure>""");
 
         assertThrows(InvocationTargetException.class, xmlConfiguration::configure);
     }
@@ -1329,10 +1403,10 @@ public class XmlConfigurationTest
     {
         // No properties
         String defolt = "baz";
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.DefaultTestConfiguration\">" +
-                "  <Set name=\"first\"><Property name=\"wibble\" deprecated=\"foo,bar\" default=\"" + defolt + "\"/></Set>  " +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.DefaultTestConfiguration">
+              <Set name="first"><Property name="wibble" deprecated="foo,bar" default="%s"/></Set>
+            </Configure>""".formatted(defolt));
         DefaultTestConfiguration config = (DefaultTestConfiguration)xmlConfiguration.configure();
         assertEquals(defolt, config.getFirst());
     }
@@ -1342,10 +1416,10 @@ public class XmlConfigurationTest
     {
         String name = "foo";
         String value = "foo";
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.DefaultTestConfiguration\">" +
-                "  <Set name=\"first\"><Property name=\"" + name + "\" deprecated=\"other,bar\" default=\"baz\"/></Set>  " +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.DefaultTestConfiguration">
+              <Set name="first"><Property name="%s" deprecated="other,bar" default="baz"/></Set>
+            </Configure>""".formatted(name));
         xmlConfiguration.getProperties().put(name, value);
         DefaultTestConfiguration config = (DefaultTestConfiguration)xmlConfiguration.configure();
         assertEquals(value, config.getFirst());
@@ -1356,10 +1430,10 @@ public class XmlConfigurationTest
     {
         String name = "bar";
         String value = "bar";
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.DefaultTestConfiguration\">" +
-                "  <Set name=\"first\"><Property name=\"foo\" deprecated=\"" + name + "\" default=\"baz\"/></Set>  " +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.DefaultTestConfiguration">
+              <Set name="first"><Property name="foo" deprecated="%s" default="baz"/></Set>
+            </Configure>""".formatted(name));
         xmlConfiguration.getProperties().put(name, value);
         DefaultTestConfiguration config = (DefaultTestConfiguration)xmlConfiguration.configure();
         assertEquals(value, config.getFirst());
@@ -1370,10 +1444,10 @@ public class XmlConfigurationTest
     {
         String name = "bar";
         String value = "bar";
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.DefaultTestConfiguration\">" +
-                "  <Set name=\"first\"><Property name=\"foo\" deprecated=\"other," + name + "\" default=\"baz\"/></Set>  " +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.DefaultTestConfiguration">
+              <Set name="first"><Property name="foo" deprecated="other,%s" default="baz"/></Set>
+            </Configure>""".formatted(name));
         xmlConfiguration.getProperties().put(name, value);
         DefaultTestConfiguration config = (DefaultTestConfiguration)xmlConfiguration.configure();
         assertEquals(value, config.getFirst());
@@ -1384,17 +1458,17 @@ public class XmlConfigurationTest
     {
         String name = "bar";
         String value = "bar";
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.DefaultTestConfiguration\">" +
-                "  <Set name=\"first\">" +
-                "  <Property>  " +
-                "    <Name>foo</Name>" +
-                "    <Deprecated>foo</Deprecated>" +
-                "    <Deprecated>" + name + "</Deprecated>" +
-                "    <Default>baz</Default>" +
-                "  </Property>  " +
-                "  </Set>  " +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.DefaultTestConfiguration">
+              <Set name="first">
+                <Property>
+                  <Name>foo</Name>
+                  <Deprecated>foo</Deprecated>
+                  <Deprecated>%s</Deprecated>
+                  <Default>baz</Default>
+                </Property>
+              </Set>
+            </Configure>""".formatted(name));
         xmlConfiguration.getProperties().put(name, value);
         DefaultTestConfiguration config = (DefaultTestConfiguration)xmlConfiguration.configure();
         assertEquals(value, config.getFirst());
@@ -1407,15 +1481,15 @@ public class XmlConfigurationTest
         String value = "bar";
         String defaultValue = "_<Property name=\"bar\"/>_<Property name=\"bar\"/>_";
         String expectedValue = "_" + value + "_" + value + "_";
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.DefaultTestConfiguration\">" +
-                "  <Set name=\"first\">" +
-                "    <Property>" +
-                "      <Name>not_found</Name>" +
-                "      <Default>" + defaultValue + "</Default>" +
-                "    </Property>" +
-                "  </Set>  " +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.DefaultTestConfiguration">
+              <Set name="first">
+                <Property>
+                  <Name>not_found</Name>
+                  <Default>%s</Default>
+                </Property>
+              </Set>
+            </Configure>""".formatted(defaultValue));
         xmlConfiguration.getProperties().put(name, value);
         DefaultTestConfiguration config = (DefaultTestConfiguration)xmlConfiguration.configure();
         assertEquals(expectedValue, config.getFirst());
@@ -1425,14 +1499,14 @@ public class XmlConfigurationTest
     public void testPropertyNotFoundWithPropertyInDefaultValueNotFoundWithDefault() throws Exception
     {
         String value = "bar";
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.DefaultTestConfiguration\">" +
-                "  <Set name=\"first\">" +
-                "    <Property name=\"not_found\">" +
-                "      <Default><Property name=\"also_not_found\" default=\"" + value + "\"/></Default>" +
-                "    </Property>" +
-                "  </Set>  " +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.DefaultTestConfiguration">
+              <Set name="first">
+                <Property name="not_found">
+                  <Default><Property name="also_not_found" default="%s"/></Default>
+                </Property>
+              </Set>
+            </Configure>""".formatted(value));
         DefaultTestConfiguration config = (DefaultTestConfiguration)xmlConfiguration.configure();
         assertEquals(value, config.getFirst());
     }
@@ -1440,21 +1514,15 @@ public class XmlConfigurationTest
     @Test
     public void testJettyStandardIdsAndPropertiesAndJettyHomeAndJettyBase() throws Exception
     {
-        String[] propNames = new String[]
-            {
-                "jetty.base",
-                "jetty.home"
-            };
-
+        String[] propNames = new String[]{"jetty.base", "jetty.home"};
         for (String propName : propNames)
         {
-            XmlConfiguration configuration =
-                asXmlConfiguration(
-                    "<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-                        "  <Set name=\"TestString\">" +
-                        "    <Property name=\"" + propName + "\"/>" +
-                        "  </Set>" +
-                        "</Configure>");
+            XmlConfiguration configuration = asXmlConfiguration("""
+                <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+                  <Set name="TestString">
+                    <Property name="%s"/>
+                  </Set>
+                </Configure>""".formatted(propName));
 
             configuration.setJettyStandardIdsAndProperties(null, null);
 
@@ -1469,21 +1537,15 @@ public class XmlConfigurationTest
     @Test
     public void testJettyStandardIdsAndPropertiesAndJettyHomeUriAndJettyBaseUri() throws Exception
     {
-        String[] propNames = new String[]
-            {
-                "jetty.base.uri",
-                "jetty.home.uri"
-            };
-
+        String[] propNames = new String[]{"jetty.base.uri", "jetty.home.uri"};
         for (String propName : propNames)
         {
-            XmlConfiguration configuration =
-                asXmlConfiguration(
-                    "<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-                        "  <Set name=\"TestString\">" +
-                        "    <Property name=\"" + propName + "\"/>" +
-                        "  </Set>" +
-                        "</Configure>");
+            XmlConfiguration configuration = asXmlConfiguration("""
+                <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+                  <Set name="TestString">
+                    <Property name="%s"/>
+                  </Set>
+                </Configure>""".formatted(propName));
 
             configuration.setJettyStandardIdsAndProperties(null, null);
 
@@ -1497,7 +1559,7 @@ public class XmlConfigurationTest
 
     public static class BarNamed
     {
-        private String foo;
+        private final String foo;
         private List<String> zeds;
 
         public BarNamed(@Name("foo") String foo)
@@ -1526,16 +1588,20 @@ public class XmlConfigurationTest
     @Test
     public void testConfiguredWithNamedArg() throws Exception
     {
-        XmlConfiguration xmlFoo = asXmlConfiguration("foo.xml",
-            "<Configure>\n" +
-                "  <New id=\"foo\" class=\"java.lang.String\">\n" +
-                "    <Arg>foozball</Arg>\n" +
-                "  </New>\n" +
-                "</Configure>");
-        XmlConfiguration xmlBar = asXmlConfiguration("bar.xml",
-            "<Configure id=\"bar\" class=\"" + BarNamed.class.getName() + "\">\n" +
-                "  <Arg name=\"foo\"><Ref refid=\"foo\"/></Arg>\n" +
-                "</Configure>");
+        XmlConfiguration xmlFoo = asXmlConfiguration("foo.xml", """
+            <Configure>
+              <New id="foo" class="java.lang.String">
+                <Arg>foozball</Arg>
+              </New>
+            </Configure>
+            """
+        );
+        XmlConfiguration xmlBar = asXmlConfiguration("bar.xml", """
+            <Configure id="bar" class="%s">
+              <Arg name="foo"><Ref refid="foo"/></Arg>
+            </Configure>
+            """.formatted(BarNamed.class.getName())
+        );
 
         ByteArrayOutputStream logBytes = captureLoggingBytes(() ->
         {
@@ -1548,7 +1614,7 @@ public class XmlConfigurationTest
 
         List<String> warnings = Arrays.stream(logBytes.toString(UTF_8).split(System.lineSeparator()))
             .filter(line -> line.contains(":WARN"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat("WARN logs size", warnings.size(), is(0));
     }
@@ -1556,16 +1622,21 @@ public class XmlConfigurationTest
     @Test
     public void testConfiguredWithArgNotUsingName() throws Exception
     {
-        XmlConfiguration xmlFoo = asXmlConfiguration("foo.xml",
-            "<Configure>\n" +
-                "  <New id=\"foo\" class=\"java.lang.String\">\n" +
-                "    <Arg>foozball</Arg>\n" +
-                "  </New>\n" +
-                "</Configure>");
-        XmlConfiguration xmlBar = asXmlConfiguration("bar.xml",
-            "<Configure id=\"bar\" class=\"" + BarNamed.class.getName() + "\">\n" +
-                "  <Arg><Ref refid=\"foo\"/></Arg>\n" + // no name specified
-                "</Configure>");
+        XmlConfiguration xmlFoo = asXmlConfiguration("foo.xml", """
+            <Configure>
+              <New id="foo" class="java.lang.String">
+                <Arg>foozball</Arg>
+              </New>
+            </Configure>
+            """
+        );
+        // no name specified
+        XmlConfiguration xmlBar = asXmlConfiguration("bar.xml", """
+            <Configure id="bar" class="%s">
+              <Arg><Ref refid="foo"/></Arg>
+            </Configure>
+            """.formatted(BarNamed.class.getName())
+        );
 
         ByteArrayOutputStream logBytes = captureLoggingBytes(() ->
         {
@@ -1578,7 +1649,7 @@ public class XmlConfigurationTest
 
         List<String> warnings = Arrays.stream(logBytes.toString(UTF_8).split(System.lineSeparator()))
             .filter(line -> line.contains(":WARN :"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat("WARN logs size", warnings.size(), is(0));
     }
@@ -1586,10 +1657,11 @@ public class XmlConfigurationTest
     @Test
     public void testConfiguredWithBadNamedArg() throws Exception
     {
-        XmlConfiguration xmlBar = asXmlConfiguration("bar.xml",
-            "<Configure id=\"bar\" class=\"" + BarNamed.class.getName() + "\">\n" +
-                "  <Arg name=\"foozball\">foozball</Arg>\n" + // wrong name specified
-                "</Configure>");
+        // wrong name specified
+        XmlConfiguration xmlBar = asXmlConfiguration("bar.xml", """
+            <Configure id="bar" class="%s">
+              <Arg name="foozball">foozball</Arg>
+            </Configure>""".formatted(BarNamed.class.getName()));
 
         IllegalStateException cause = assertThrows(IllegalStateException.class, () ->
             mimicXmlConfigurationMain(xmlBar));
@@ -1600,11 +1672,12 @@ public class XmlConfigurationTest
     @Test
     public void testConfiguredWithTooManyNamedArgs() throws Exception
     {
-        XmlConfiguration xmlBar = asXmlConfiguration("bar.xml",
-            "<Configure id=\"bar\" class=\"" + BarNamed.class.getName() + "\">\n" +
-                "  <Arg name=\"foo\">foozball</Arg>\n" +
-                "  <Arg name=\"foo\">soccer</Arg>\n" + // neither should win
-                "</Configure>");
+        // neither should win
+        XmlConfiguration xmlBar = asXmlConfiguration("bar.xml", """
+            <Configure id="bar" class="%s">
+              <Arg name="foo">foozball</Arg>
+              <Arg name="foo">soccer</Arg>
+            </Configure>""".formatted(BarNamed.class.getName()));
 
         IllegalStateException cause = assertThrows(IllegalStateException.class, () ->
             mimicXmlConfigurationMain(xmlBar));
@@ -1615,23 +1688,30 @@ public class XmlConfigurationTest
     @Test
     public void testConfiguredSameWithNamedArgTwice() throws Exception
     {
-        XmlConfiguration xmlFoo = asXmlConfiguration("foo.xml",
-            "<Configure>\n" +
-                "  <New id=\"foo\" class=\"java.lang.String\">\n" +
-                "    <Arg>foozball</Arg>\n" +
-                "  </New>\n" +
-                "</Configure>");
-        XmlConfiguration xmlBar = asXmlConfiguration("bar.xml",
-            "<Configure id=\"bar\" class=\"" + BarNamed.class.getName() + "\">\n" +
-                "  <Arg name=\"foo\"><Ref refid=\"foo\"/></Arg>\n" +
-                "</Configure>");
-        XmlConfiguration xmlAddZed = asXmlConfiguration("zed.xml",
-            "<Configure id=\"bar\" class=\"" + BarNamed.class.getName() + "\">\n" +
-                "  <Arg name=\"foo\">baz</Arg>\n" + // the invalid line
-                "  <Call name=\"addZed\">\n" +
-                "    <Arg>plain-zero</Arg>\n" +
-                "  </Call>\n" +
-                "</Configure>");
+        XmlConfiguration xmlFoo = asXmlConfiguration("foo.xml", """
+            <Configure>
+              <New id="foo" class="java.lang.String">
+                <Arg>foozball</Arg>
+              </New>
+            </Configure>
+            """
+        );
+        XmlConfiguration xmlBar = asXmlConfiguration("bar.xml", """
+            <Configure id="bar" class="%s">
+              <Arg name="foo"><Ref refid="foo"/></Arg>
+            </Configure>
+            """.formatted(BarNamed.class.getName())
+        );
+        // the invalid line
+        XmlConfiguration xmlAddZed = asXmlConfiguration("zed.xml", """
+            <Configure id="bar" class="%s">
+              <Arg name="foo">baz</Arg>
+              <Call name="addZed">
+                <Arg>plain-zero</Arg>
+              </Call>
+            </Configure>
+            """.formatted(BarNamed.class.getName())
+        );
 
         ByteArrayOutputStream logBytes = captureLoggingBytes(() ->
         {
@@ -1647,7 +1727,7 @@ public class XmlConfigurationTest
 
         List<String> warnings = Arrays.stream(logBytes.toString(UTF_8).split(System.lineSeparator()))
             .filter(line -> line.contains(":WARN :"))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat("WARN logs count", warnings.size(), is(1));
 
@@ -1679,13 +1759,12 @@ public class XmlConfigurationTest
     public void testJettyStandardIdsAndPropertiesJettyWebappsUri() throws Exception
     {
         Path war = MavenTestingUtils.getTargetPath("no.war");
-        XmlConfiguration configuration =
-            asXmlConfiguration(
-                "<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-                    "  <Set name=\"TestString\">" +
-                    "    <Property name=\"" + "jetty.webapps.uri" + "\"/>" +
-                    "  </Set>" +
-                    "</Configure>");
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="TestString">
+                <Property name="jetty.webapps.uri"/>
+              </Set>
+            </Configure>""");
 
         configuration.setJettyStandardIdsAndProperties(null, war);
 
@@ -1699,14 +1778,14 @@ public class XmlConfigurationTest
     public void testDeprecated() throws Exception
     {
         Class<?> testClass = AnnotatedTestConfiguration.class;
-        XmlConfiguration xmlConfiguration = asXmlConfiguration(
-            "<Configure class=\"" + testClass.getName() + "\">" +
-                "  <Set name=\"deprecated\">foo</Set>" +
-                "  <Set name=\"obsolete\">" +
-                "    <Call name=\"setDeprecated\"><Arg><Get name=\"deprecated\" /></Arg></Call>" +
-                "  </Set>" +
-                "  <Get name=\"obsolete\" />" +
-                "</Configure>");
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="%s">
+              <Set name="deprecated">foo</Set>
+              <Set name="obsolete">
+                <Call name="setDeprecated"><Arg><Get name="deprecated" /></Arg></Call>
+              </Set>
+              <Get name="obsolete" />
+            </Configure>""".formatted(testClass.getName()));
 
         ByteArrayOutputStream logBytes = captureLoggingBytes(xmlConfiguration::configure);
 
@@ -1714,7 +1793,7 @@ public class XmlConfigurationTest
         List<String> warnings = Arrays.stream(lines)
             .filter(line -> line.contains(":WARN :"))
             .filter(line -> line.contains(testClass.getSimpleName()))
-            .collect(Collectors.toList());
+            .toList();
         // 1. Deprecated constructor
         // 2. Deprecated <Set> method
         // 3. Deprecated <Get> method
@@ -1789,16 +1868,15 @@ public class XmlConfigurationTest
     public void testCallResolvePath(String jettyBasePath, String configValue, String expectedPath) throws Exception
     {
         Path war = MavenTestingUtils.getTargetPath("no.war");
-        XmlConfiguration configuration =
-            asXmlConfiguration(
-                "<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-                    "  <Set name=\"TestString\">" +
-                    "    <Call name=\"resolvePath\" class=\"org.eclipse.jetty.xml.XmlConfiguration\">" +
-                    "     <Arg><Property name=\"jetty.base\"/></Arg>" +
-                    "     <Arg><Property name=\"jetty.sslContext.keyStorePath\" default=\"etc/keystore.p12\" /></Arg>" +
-                    "    </Call>" +
-                    "  </Set>" +
-                    "</Configure>");
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="TestString">
+                <Call name="resolvePath" class="org.eclipse.jetty.xml.XmlConfiguration">
+                  <Arg><Property name="jetty.base"/></Arg>
+                  <Arg><Property name="jetty.sslContext.keyStorePath" default="etc/keystore.p12" /></Arg>
+                </Call>
+              </Set>
+            </Configure>""");
 
         try
         {
@@ -1851,7 +1929,7 @@ public class XmlConfigurationTest
     {
         static AtomicReference<Base> base = new AtomicReference<>();
 
-        private Map<String, Object> _map = new HashMap<>();
+        private final Map<String, Object> _map = new HashMap<>();
 
         public Base()
         {
@@ -1946,12 +2024,12 @@ public class XmlConfigurationTest
     @Test
     public void testPropertyNoNameAttributeWithDeprecatedAttribute() throws Exception
     {
-        XmlConfiguration configuration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-            "  <Set name=\"TestString\">" +
-            "    <Property deprecated=\"jetty.deprecated\" />" +
-            "  </Set>" +
-            "</Configure>"
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="TestString">
+                <Property deprecated="jetty.deprecated" />
+              </Set>
+            </Configure>"""
         );
 
         String value = "deprecated";
@@ -1968,15 +2046,15 @@ public class XmlConfigurationTest
     {
         // SocketChannel.open() returns an internal class
         // that cannot be accessed, so <Get> must specify the
-        // class to use to lookup the 'getLocalAddress' method.
-        XmlConfiguration configuration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-            "  <Set name=\"Test\">" +
-            "    <Call class=\"java.nio.channels.SocketChannel\" name=\"open\">" +
-            "      <Get class=\"java.nio.channels.SocketChannel\" name=\"localAddress\" />" +
-            "    </Call>" +
-            "  </Set>" +
-            "</Configure>"
+        // class to use to look up the 'getLocalAddress' method.
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="Test">
+                <Call class="java.nio.channels.SocketChannel" name="open">
+                  <Get class="java.nio.channels.SocketChannel" name="localAddress" />
+                </Call>
+              </Set>
+            </Configure>"""
         );
 
         ExampleConfiguration tc = new ExampleConfiguration();
@@ -1990,17 +2068,17 @@ public class XmlConfigurationTest
     {
         // SSLSocketFactory.getDefault().createSocket() returns an internal
         // class that cannot be accessed, so <Set> must specify the
-        // class to use to lookup the 'setNeedClientAuth' method.
-        XmlConfiguration configuration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-            "  <Set name=\"Test\">" +
-            "    <Call class=\"javax.net.ssl.SSLSocketFactory\" name=\"getDefault\">" +
-            "      <Call class=\"javax.net.ssl.SSLSocketFactory\" name=\"createSocket\">" +
-            "        <Set class=\"javax.net.ssl.SSLSocket\" name=\"needClientAuth\">true</Set>" +
-            "      </Call>" +
-            "    </Call>" +
-            "  </Set>" +
-            "</Configure>"
+        // class to use to look up the 'setNeedClientAuth' method.
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="Test">
+                <Call class="javax.net.ssl.SSLSocketFactory" name="getDefault">
+                  <Call class="javax.net.ssl.SSLSocketFactory" name="createSocket">
+                    <Set class="javax.net.ssl.SSLSocket" name="needClientAuth">true</Set>
+                  </Call>
+                </Call>
+              </Set>
+            </Configure>"""
         );
 
         ExampleConfiguration tc = new ExampleConfiguration();
@@ -2014,15 +2092,15 @@ public class XmlConfigurationTest
     {
         // Executors.newSingleThreadScheduledExecutor() returns an
         // internal class that cannot be accessed, so <Call> must
-        // specify the class to use to lookup the 'shutdown' method.
-        XmlConfiguration configuration = asXmlConfiguration(
-            "<Configure class=\"org.eclipse.jetty.xml.ExampleConfiguration\">" +
-            "  <Set name=\"Test\">" +
-            "    <Call class=\"java.util.concurrent.Executors\" name=\"newSingleThreadScheduledExecutor\">" +
-            "      <Call class=\"java.util.concurrent.ExecutorService\" name=\"shutdown\" />" +
-            "    </Call>" +
-            "  </Set>" +
-            "</Configure>"
+        // specify the class to use to look up the 'shutdown' method.
+        XmlConfiguration configuration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="Test">
+                <Call class="java.util.concurrent.Executors" name="newSingleThreadScheduledExecutor">
+                  <Call class="java.util.concurrent.ExecutorService" name="shutdown" />
+                </Call>
+              </Set>
+            </Configure>"""
         );
 
         ExampleConfiguration tc = new ExampleConfiguration();
@@ -2087,8 +2165,7 @@ public class XmlConfigurationTest
             <!DOCTYPE Configure PUBLIC "-//Jetty//Configure//EN" "https://%s">
             <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
               <Set name="Test">Value</Set>
-            </Configure>
-            """.formatted(doctype);
+            </Configure>""".formatted(doctype);
         XmlConfiguration xmlConfiguration = new XmlConfiguration(new MemoryResource(new URI("/test"), rawXml.getBytes(UTF_8)));
         xmlConfiguration.getXmlParser().setValidating(true);
         Object configured = xmlConfiguration.configure();
@@ -2274,6 +2351,19 @@ public class XmlConfigurationTest
             "public void org.eclipse.jetty.xml.XmlConfigurationTest$FooObj.foo(int,java.lang.String,java.lang.String,java.lang.Object)"
         };
         assertThat(orderedMethodIds, contains(expectedOrder));
+    }
+
+    @Test
+    public void testCollectionSetterWithListSubClassObject() throws Exception
+    {
+        XmlConfiguration xmlConfiguration = asXmlConfiguration("""
+            <Configure class="org.eclipse.jetty.xml.ExampleConfiguration">
+              <Set name="collection">
+                <Call class="java.util.List" name="of" />
+              </Set>
+            </Configure>""");
+        ExampleConfiguration configuration = (ExampleConfiguration)xmlConfiguration.configure();
+        assertThat(configuration.getCollection(), notNullValue());
     }
 
     public static class FooObj
